--- a/0708_pj01.ipynb
+++ b/0708_pj01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,6 +185,274 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV, cross_val_score, cross_val_predict\n",
+    "from sklearn.metrics import accuracy_score, mean_squared_error, mean_absolute_error\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# 데이터 불러오기\n",
+    "data = pd.read_csv('./train_data.csv')\n",
+    "\n",
+    "# 특성과 타겟 변수 분리\n",
+    "data_input = data.drop(columns=['Bankrupt?'])\n",
+    "data_target = data['Bankrupt?']\n",
+    "\n",
+    "# 데이터 분리\n",
+    "train_input, test_input, train_target, test_target = train_test_split(\n",
+    "    data_input, data_target, random_state=42)\n",
+    "\n",
+    "# 랜덤 포레스트 모델 학습\n",
+    "rf_model = RandomForestClassifier(random_state=42)\n",
+    "rf_model.fit(train_input, train_target)\n",
+    "\n",
+    "# 특성 중요도 확인\n",
+    "importances = rf_model.feature_importances_\n",
+    "features = data_input.columns\n",
+    "feature_importances = pd.DataFrame({'Feature': features, 'Importance': importances})\n",
+    "feature_importances = feature_importances.sort_values(by='Importance', ascending=False)\n",
+    "\n",
+    "# 중요도가 낮은 특성 제거 (중요도 0.01 이하인 특성 제거)\n",
+    "important_features = feature_importances[feature_importances['Importance'] > 0.01]['Feature']\n",
+    "data_input_reduced = data_input[important_features]\n",
+    "\n",
+    "# 중요한 특성만 포함된 데이터 저장\n",
+    "file_path_reduced = './data_reduced1.csv'\n",
+    "data_input_reduced.to_csv(file_path_reduced, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "훈련 세트 정확도 (하이퍼파라미터 튜닝 후): 0.9787338059154241\n",
+      "테스트 세트 정확도 (하이퍼파라미터 튜닝 후): 0.9706744868035191\n",
+      "훈련 세트 MSE (하이퍼파라미터 튜닝 후): 0.021266194084575897\n",
+      "테스트 세트 MSE (하이퍼파라미터 튜닝 후): 0.02932551319648094\n",
+      "훈련 세트 MAE (하이퍼파라미터 튜닝 후): 0.021266194084575897\n",
+      "테스트 세트 MAE (하이퍼파라미터 튜닝 후): 0.02932551319648094\n",
+      "교차 검증 평균 정확도:  0.9649859799980365\n",
+      "교차 검증 MSE:  0.035013748854262144\n",
+      "교차 검증 MAE:  0.035013748854262144\n"
+     ]
+    }
+   ],
+   "source": [
+    "# data_reduced.csv 파일의 데이터를 불러오기\n",
+    "data_reduced = pd.read_csv(file_path_reduced)\n",
+    "\n",
+    "# 데이터 분리 (중요도가 낮은 특성 제거 후)\n",
+    "train_input_reduced, test_input_reduced, train_target_reduced, test_target_reduced = train_test_split(\n",
+    "    data_reduced, data_target, random_state=42)\n",
+    "\n",
+    "# 하이퍼파라미터 튜닝\n",
+    "param_grid = {\n",
+    "    'n_estimators': [100, 200],\n",
+    "    'max_depth': [5, 10, 15],\n",
+    "    'min_samples_split': [10, 15],\n",
+    "    'min_samples_leaf': [4, 6],\n",
+    "    'bootstrap': [True]\n",
+    "}\n",
+    "\n",
+    "grid_search = GridSearchCV(estimator=RandomForestClassifier(random_state=42),\n",
+    "                           param_grid=param_grid,\n",
+    "                           cv=3,\n",
+    "                           n_jobs=-1,\n",
+    "                           scoring='accuracy')\n",
+    "grid_search.fit(train_input_reduced, train_target_reduced)\n",
+    "\n",
+    "best_rf_model = grid_search.best_estimator_\n",
+    "\n",
+    "# 최적의 하이퍼파라미터로 모델 재학습\n",
+    "best_rf_model.fit(train_input_reduced, train_target_reduced)\n",
+    "\n",
+    "# 예측\n",
+    "train_predictions_reduced = best_rf_model.predict(train_input_reduced)\n",
+    "test_predictions_reduced = best_rf_model.predict(test_input_reduced)\n",
+    "\n",
+    "# 모델 평가 - 정확도\n",
+    "train_accuracy_reduced = accuracy_score(train_target_reduced, train_predictions_reduced)\n",
+    "test_accuracy_reduced = accuracy_score(test_target_reduced, test_predictions_reduced)\n",
+    "\n",
+    "# 모델 평가 - MSE, MAE\n",
+    "train_mse_reduced = mean_squared_error(train_target_reduced, train_predictions_reduced)\n",
+    "test_mse_reduced = mean_squared_error(test_target_reduced, test_predictions_reduced)\n",
+    "train_mae_reduced = mean_absolute_error(train_target_reduced, train_predictions_reduced)\n",
+    "test_mae_reduced = mean_absolute_error(test_target_reduced, test_predictions_reduced)\n",
+    "\n",
+    "print(f\"훈련 세트 정확도 (하이퍼파라미터 튜닝 후): {train_accuracy_reduced}\")\n",
+    "print(f\"테스트 세트 정확도 (하이퍼파라미터 튜닝 후): {test_accuracy_reduced}\")\n",
+    "print(f\"훈련 세트 MSE (하이퍼파라미터 튜닝 후): {train_mse_reduced}\")\n",
+    "print(f\"테스트 세트 MSE (하이퍼파라미터 튜닝 후): {test_mse_reduced}\")\n",
+    "print(f\"훈련 세트 MAE (하이퍼파라미터 튜닝 후): {train_mae_reduced}\")\n",
+    "print(f\"테스트 세트 MAE (하이퍼파라미터 튜닝 후): {test_mae_reduced}\")\n",
+    "\n",
+    "# 교차 검증 (Cross-Validation)\n",
+    "cv_scores = cross_val_score(best_rf_model, data_input_reduced, data_target, cv=3)\n",
+    "cv_predictions = cross_val_predict(best_rf_model, data_input_reduced, data_target, cv=3)\n",
+    "\n",
+    "# 교차 검증 평가 - 정확도\n",
+    "cv_accuracy = np.mean(cv_scores)\n",
+    "\n",
+    "# 교차 검증 평가 - MSE, MAE\n",
+    "cv_mse = mean_squared_error(data_target, cv_predictions)\n",
+    "cv_mae = mean_absolute_error(data_target, cv_predictions)\n",
+    "\n",
+    "print(\"교차 검증 평균 정확도: \", cv_accuracy)\n",
+    "print(\"교차 검증 MSE: \", cv_mse)\n",
+    "print(\"교차 검증 MAE: \", cv_mae)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV, cross_val_score, cross_val_predict\n",
+    "from sklearn.metrics import accuracy_score, mean_squared_error, mean_absolute_error\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# 데이터 불러오기\n",
+    "data = pd.read_csv('./train_data.csv')\n",
+    "n_data = pd.read_csv('./test_data.csv')\n",
+    "\n",
+    "# 특성과 타겟 변수 분리\n",
+    "data_input = data.drop(columns=['Bankrupt?'])\n",
+    "data_target = data['Bankrupt?']\n",
+    "\n",
+    "ntest_input = n_data.drop(columns=['Bankrupt?'])\n",
+    "ntest_target = n_data['Bankrupt?']\n",
+    "\n",
+    "# 데이터 분리\n",
+    "train_input, test_input, train_target, test_target = train_test_split(\n",
+    "    data_input, data_target, random_state=42)\n",
+    "\n",
+    "# 랜덤 포레스트 모델 학습\n",
+    "rf_model = RandomForestClassifier(random_state=42)\n",
+    "rf_model.fit(train_input, train_target)\n",
+    "\n",
+    "# 특성 중요도 확인(훈련)\n",
+    "importances = rf_model.feature_importances_\n",
+    "features = data_input.columns\n",
+    "feature_importances = pd.DataFrame({'Feature': features, 'Importance': importances})\n",
+    "feature_importances = feature_importances.sort_values(by='Importance', ascending=False)\n",
+    "\n",
+    "# 중요도가 낮은 특성 제거 (중요도 0.01 이하인 특성 제거)(훈련)\n",
+    "important_features = feature_importances[feature_importances['Importance'] > 0.01]['Feature']\n",
+    "data_input_reduced = data_input[important_features]\n",
+    "\n",
+    "# 특성 중요도 확인(테스트)\n",
+    "importances = rf_model.feature_importances_\n",
+    "features = data_input.columns\n",
+    "feature_importances = pd.DataFrame({'Feature': features, 'Importance': importances})\n",
+    "feature_importances = feature_importances.sort_values(by='Importance', ascending=False)\n",
+    "\n",
+    "# 중요도가 낮은 특성 제거 (중요도 0.01 이하인 특성 제거)(테스트)\n",
+    "important_features = feature_importances[feature_importances['Importance'] > 0.01]['Feature']\n",
+    "data_input_reduced = data_input[important_features]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# data_reduced.csv 파일의 데이터를 불러오기\n",
+    "data_reduced = pd.read_csv(file_path_reduced)\n",
+    "\n",
+    "# 데이터 분리 (중요도가 낮은 특성 제거 후)\n",
+    "train_input_reduced, test_input_reduced, train_target_reduced, test_target_reduced = train_test_split(\n",
+    "    data_reduced, data_target, random_state=42)\n",
+    "\n",
+    "# 하이퍼파라미터 튜닝\n",
+    "param_grid = {\n",
+    "    'n_estimators': [100, 200],\n",
+    "    'max_depth': [5, 10, 15],\n",
+    "    'min_samples_split': [10, 15],\n",
+    "    'min_samples_leaf': [4, 6],\n",
+    "    'bootstrap': [True]\n",
+    "}\n",
+    "\n",
+    "grid_search = GridSearchCV(estimator=RandomForestClassifier(random_state=42),\n",
+    "                           param_grid=param_grid,\n",
+    "                           cv=3,\n",
+    "                           n_jobs=-1,\n",
+    "                           scoring='accuracy')\n",
+    "grid_search.fit(train_input_reduced, train_target_reduced)\n",
+    "\n",
+    "best_rf_model = grid_search.best_estimator_\n",
+    "\n",
+    "# 최적의 하이퍼파라미터로 모델 재학습\n",
+    "best_rf_model.fit(train_input_reduced, train_target_reduced)\n",
+    "\n",
+    "# 예측\n",
+    "train_predictions_reduced = best_rf_model.predict(train_input_reduced)\n",
+    "test_predictions_reduced = best_rf_model.predict(test_input_reduced)\n",
+    "\n",
+    "# 모델 평가 - 정확도\n",
+    "train_accuracy_reduced = accuracy_score(train_target_reduced, train_predictions_reduced)\n",
+    "test_accuracy_reduced = accuracy_score(test_target_reduced, test_predictions_reduced)\n",
+    "\n",
+    "# 모델 평가 - MSE, MAE\n",
+    "train_mse_reduced = mean_squared_error(train_target_reduced, train_predictions_reduced)\n",
+    "test_mse_reduced = mean_squared_error(test_target_reduced, test_predictions_reduced)\n",
+    "train_mae_reduced = mean_absolute_error(train_target_reduced, train_predictions_reduced)\n",
+    "test_mae_reduced = mean_absolute_error(test_target_reduced, test_predictions_reduced)\n",
+    "\n",
+    "print(f\"훈련 세트 정확도 (하이퍼파라미터 튜닝 후): {train_accuracy_reduced}\")\n",
+    "print(f\"테스트 세트 정확도 (하이퍼파라미터 튜닝 후): {test_accuracy_reduced}\")\n",
+    "print(f\"훈련 세트 MSE (하이퍼파라미터 튜닝 후): {train_mse_reduced}\")\n",
+    "print(f\"테스트 세트 MSE (하이퍼파라미터 튜닝 후): {test_mse_reduced}\")\n",
+    "print(f\"훈련 세트 MAE (하이퍼파라미터 튜닝 후): {train_mae_reduced}\")\n",
+    "print(f\"테스트 세트 MAE (하이퍼파라미터 튜닝 후): {test_mae_reduced}\")\n",
+    "\n",
+    "# 교차 검증 (Cross-Validation)\n",
+    "cv_scores = cross_val_score(best_rf_model, data_input_reduced, data_target, cv=3)\n",
+    "cv_predictions = cross_val_predict(best_rf_model, data_input_reduced, data_target, cv=3)\n",
+    "\n",
+    "# 교차 검증 평가 - 정확도\n",
+    "cv_accuracy = np.mean(cv_scores)\n",
+    "\n",
+    "# 교차 검증 평가 - MSE, MAE\n",
+    "cv_mse = mean_squared_error(data_target, cv_predictions)\n",
+    "cv_mae = mean_absolute_error(data_target, cv_predictions)\n",
+    "\n",
+    "print(\"교차 검증 평균 정확도: \", cv_accuracy)\n",
+    "print(\"교차 검증 MSE: \", cv_mse)\n",
+    "print(\"교차 검증 MAE: \", cv_mae)"
+   ]
   }
  ],
  "metadata": {
