--- a/0708_pj02 (1).ipynb
+++ b/0708_pj02 (1).ipynb
@@ -2110,9 +2110,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ML",
+   "display_name": "machine_HK",
    "language": "python",
-   "name": "python3"
+   "name": "hk"
   },
   "language_info": {
    "codemirror_mode": {
