--- a/0709_중간.ipynb
+++ b/0709_중간.ipynb
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -573,9 +573,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "machine_HK",
+   "display_name": "ML",
    "language": "python",
-   "name": "hk"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
