--- a/0708_pj02 (1).ipynb
+++ b/0708_pj02 (1).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
        "'./test_data .csv'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,18 +92,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'data_input_reduced' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 12\u001b[0m\n\u001b[0;32m      8\u001b[0m data \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m./train_data_reduced.csv\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     10\u001b[0m \u001b[38;5;66;03m# 데이터 분리 (중요도가 낮은 특성 제거 후)\u001b[39;00m\n\u001b[0;32m     11\u001b[0m train_input_reduced, test_input_reduced, train_target_reduced, test_target_reduced \u001b[38;5;241m=\u001b[39m train_test_split(\n\u001b[1;32m---> 12\u001b[0m     data_input_reduced, data_target, random_state\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m42\u001b[39m)\n\u001b[0;32m     14\u001b[0m \u001b[38;5;66;03m# 랜덤 포레스트 모델 재학습\u001b[39;00m\n\u001b[0;32m     15\u001b[0m rf_model_reduced \u001b[38;5;241m=\u001b[39m RandomForestClassifier(random_state\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m42\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'data_input_reduced' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "최적의 하이퍼파라미터: {'bootstrap': True, 'max_depth': 10, 'min_samples_leaf': 6, 'min_samples_split': 10, 'n_estimators': 100}\n",
+      "훈련 세트 정확도 (하이퍼파라미터 튜닝 후): 0.9777560498655585\n",
+      "테스트 세트 정확도 (하이퍼파라미터 튜닝 후): 0.9714076246334311\n",
+      "ntest 세트 정확도 (하이퍼파라미터 튜닝 후): 0.9860703812316716\n",
+      "교차 검증 평균 정확도 (하이퍼파라미터 튜닝 후):  0.965352887259395\n"
      ]
     }
    ],
@@ -119,7 +119,7 @@
     "\n",
     "# 데이터 분리 (중요도가 낮은 특성 제거 후)\n",
     "train_input_reduced, test_input_reduced, train_target_reduced, test_target_reduced = train_test_split(\n",
-    "    data_input_reduced, data_target, random_state=42)\n",
+    "    data_input, data_target, random_state=42)\n",
     "\n",
     "# 랜덤 포레스트 모델 재학습\n",
     "rf_model_reduced = RandomForestClassifier(random_state=42)\n",
@@ -164,18 +164,18 @@
     "print(f\"ntest 세트 정확도 (하이퍼파라미터 튜닝 후): {ntest_accuracy_tuned}\")\n",
     "\n",
     "# 교차 검증 (Cross-Validation, 하이퍼파라미터 튜닝 후)\n",
-    "cv_scores_tuned = cross_val_score(best_rf_model, data_input_reduced, data_target, cv=5)\n",
+    "cv_scores_tuned = cross_val_score(best_rf_model, data_input, data_target, cv=5)\n",
     "cv_accuracy_tuned = np.mean(cv_scores_tuned)\n",
     "\n",
     "# 교차 검증 평가 - MSE, MAE (하이퍼파라미터 튜닝 후)\n",
-    "cv_predictions_tuned = cross_val_predict(best_rf_model, data_input_reduced, data_target, cv=5)\n",
+    "cv_predictions_tuned = cross_val_predict(best_rf_model, data_input, data_target, cv=5)\n",
     "\n",
     "print(\"교차 검증 평균 정확도 (하이퍼파라미터 튜닝 후): \", cv_accuracy_tuned)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -797,8 +797,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "파산하지 않는 기업을 파산한다고 예측한다. precision(정밀도)을 높이자\n",
-    "파산할 기업을 파산하지 않는다고 예측한다. recall(재현율)을 높이자"
+    "- 파산하지 않는 기업을 파산한다고 예측한다. precision(정밀도)을 높이자\n",
+    "- 파산할 기업을 파산하지 않는다고 예측한다. recall(재현율)을 높이자"
    ]
   },
   {
@@ -1519,7 +1519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1564,7 +1564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1685,7 +1685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1808,7 +1808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1935,7 +1935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2110,9 +2110,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "machine_HK",
+   "display_name": "ML",
    "language": "python",
-   "name": "hk"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
